<resources>
    //login strings
    <string name="app_name">CS360InventoryApp</string>
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="un_hint">Username</string>
    <string name="pass_hint">Password</string>
    <string name="pass_hint2">Confirm Password</string>
    <string name="new_user">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="title_activity_item_detail_host">ItemDetailHostActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    //list strings
    <string name="item_name_hint">Item Name</string>
    <string name="item_quant_hint">Quantity</string>
    <string name="item_unit_hint">Unit</string>
    <string name="Inventory">Inventory</string>
    <string name="Settings">Settings</string>
    <string name="SMSPermissions">SMS Permissions</string>
    <string name="phone_hint">Phone Number</string>
    <string name="settingsBtn">Save</string>

</resources>