<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.Register">
        <TextView
            android:id="@+id/registerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/input_username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:hint="@string/un_hint"
            android:layout_gravity="center_horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:background="@drawable/input"
            android:inputType="text"/>

        <EditText
            android:id="@+id/input_Email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/email_hint"
            android:layout_gravity="center_horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:background="@drawable/input"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/input_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/pass_hint"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:background="@drawable/input"
            android:inputType="textPassword"
            android:layout_marginTop="30dp"
            android:autofillHints=""/>
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/pass_hint2"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:background="@drawable/input"
            android:inputType="textPassword"
            android:layout_marginTop="30dp"
            android:autofillHints=""/>
        <Button
            android:id="@+id/registerButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/linkBackground"
            android:text="@string/register" />

</LinearLayout>