<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:fitsSystemWindows="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="75dp"
        android:paddingEnd="16dp">

        <Switch
            android:id="@+id/smsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:switchPadding="25dp"
            android:text="@string/SMSPermissions" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/input"
            android:digits="0123456789+"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/settingsBtn" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>